[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/UIElements/MenuBook.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UIv2/Label.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/PlayerSelection.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UIElements/PlayerProxy.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.054902, 0.0627451, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="Player Selection" type="Node2D"]
script = ExtResource( 3 )

[node name="Instructions" parent="." instance=ExtResource( 2 )]
margin_top = 49.0
margin_right = 500.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
custom_styles/normal = SubResource( 1 )
text = "Click an existing player or create a new one to begin."
align = 1

[node name="MenuBook" parent="." instance=ExtResource( 1 )]
visible = false
activateOnReady = true

[node name="LeftPage" type="Button" parent="MenuBook"]
visible = false
margin_left = -61.0
margin_top = -47.0
margin_right = -10.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 51, 27.3333 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
flat = true

[node name="PlayerProxy" parent="MenuBook/LeftPage" instance=ExtResource( 4 )]
position = Vector2( 24, 26 )

[node name="Text" parent="MenuBook/LeftPage" instance=ExtResource( 2 )]
margin_left = -4.0
margin_top = 68.0
margin_right = 51.0
margin_bottom = 76.0
align = 1

[node name="RightPage" type="Button" parent="MenuBook"]
visible = false
margin_left = 11.0
margin_top = -47.0
margin_right = 62.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 51, 27.3333 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
flat = true

[node name="PlayerProxy" parent="MenuBook/RightPage" instance=ExtResource( 4 )]
position = Vector2( 26, 26 )

[node name="Text" parent="MenuBook/RightPage" instance=ExtResource( 2 )]
margin_left = -3.0
margin_top = 68.0
margin_right = 54.0
margin_bottom = 78.0
align = 1

[node name="PlayerQueue" type="Node2D" parent="."]
visible = false
position = Vector2( 500, 250 )
scale = Vector2( 3, 3 )
z_index = 1

[connection signal="left_arrow_pressed" from="MenuBook" to="." method="_on_Menu_Book_left_arrow_pressed"]
[connection signal="right_arrow_pressed" from="MenuBook" to="." method="_on_Menu_Book_right_arrow_pressed"]
[connection signal="pressed" from="MenuBook/LeftPage" to="." method="_on_LeftPage_pressed"]
[connection signal="pressed" from="MenuBook/RightPage" to="." method="_on_RightPage_pressed"]
